<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/transparent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_file"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_gravity="center_horizontal" />
    <View
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_2sdp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_10sdp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filename"
            android:textSize="@dimen/_22sdp"
            android:inputType="text"
            android:layout_margin="@dimen/_10sdp"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:id="@+id/filename"
            tools:ignore="TextFields" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp">
            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginEnd="@dimen/_10sdp"
                android:textAlignment="center"
                android:background="@drawable/button_background"
                android:id="@+id/save"
                tools:ignore="ButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="@drawable/button_background"
                android:text="@string/cancel"
                android:id="@+id/cancel"
                tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>