<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_1sdp">

            <ImageView
                android:layout_width="@dimen/_70sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/pdf"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fileName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_1sdp"
                    android:text="@string/filename"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_18sdp" />

                <TextView
                    android:id="@+id/size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_1sdp"
                    android:text="@string/size"
                    android:textColor="@color/details"
                    android:textSize="@dimen/_11sdp" />

                <TextView
                    android:id="@+id/dateAndTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_1sdp"
                    android:text="@string/datetime"
                    android:textColor="@color/details"
                    android:textSize="@dimen/_11sdp" />
            </LinearLayout>
        </LinearLayout>
    <View
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_below="@id/linearLayout"
        android:background="@color/details"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"/>
</RelativeLayout>